# LiUKRR

./: CMakeLists.txt
scripts/plot/: histogram.sh  mae.plot  plot_final_hist.py  plot_final_hist_all.py  plot_final_hist_ijqc.py  plot_final_hist_p1.py  plot_final_hist_p2.py  plot_final_hist_p3.py  plot_final_scatter_all.py  plot_final_scatter_ijqc.py  plot_final_scatter_p1.py  plot_final_scatter_p2.py  plot_final_scatter_p3.py
scripts/preproc/: postfix  postfix.save  prepostproc_vasp  preproc_vasp  run_isotropy
src/krr/: CMakeLists.txt  Doxyfile.in  dataset.cc  dataset.h  descriptor.cc  descriptor.h  kernel.hh  machine.cc  machine.h  progargparser.cc  progargparser.h  quantity.cc  quantity.h  sorting.hh  types.h  utiles.cc  utiles.h
src/test/: CMakeLists.txt  analyzer.cc  error.cc  main.cc  runconfparser.cc  runconfparser.h  sineplot.cc  unit.cc
